[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://gfx/Players/bunny2_ready.png" type="Texture" id=2]
[ext_resource path="res://gfx/Players/bunny2_stand.png" type="Texture" id=3]
[ext_resource path="res://gfx/Players/bunny2_hurt.png" type="Texture" id=4]
[ext_resource path="res://gfx/Players/bunny2_walk1.png" type="Texture" id=5]
[ext_resource path="res://gfx/Players/bunny2_walk2.png" type="Texture" id=6]
[ext_resource path="res://gfx/Players/bunny2_jump.png" type="Texture" id=7]
[ext_resource path="res://Sub Scenes/Animation.gd" type="Script" id=8]
[ext_resource path="res://SFX/coin_SFX.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=10]
[ext_resource path="res://SFX/lose5.ogg" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 60.0
height = 47.674

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 15
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]

[node name="Animation" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true
script = ExtResource( 8 )

[node name="RayCast2D" type="RayCast2D" parent="Animation" index="0"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 105 )
collision_mask = 2
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

visible = false
position = Vector2( 0, 16.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Coin_sfx" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 9 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Jump_sfx" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Pain_sfx" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 11 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


